syntax = "proto3";

package fairyring.pep;

import "google/api/annotations.proto";
option go_package = "github.com/Fairblock/fairyring/x/pep/types";

// Query defines the gRPC querier service.
service Query {
    // Queries a list of DecryptData items.
    rpc DecryptData (QueryDecryptDataRequest) returns (QueryDecryptDataResponse) {
      option (google.api.http).get = "/Fairblock/fairyring/pep/decrypt_data/{aggr_keyshare}/{encrypted_data}";
  
  }
}

message QueryDecryptDataRequest {
    string pubkey = 1;
    string aggr_keyshare  = 2;
    string encrypted_data = 3;
}
  
message QueryDecryptDataResponse {
    string decrypted_data = 1;
}